# element-miniscope

./: pyproject.toml  setup.py
element_miniscope/: miniscope.py  miniscope_report.py
element_miniscope/plotting/: cell_plot.py
