[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "element-miniscope"
version = "0.4.2"
description = "DataJoint Element for functional calcium imaging data acquired with the UCLA Miniscope and Miniscope DAQ acquisition system, and analyzed with CaImAn."
authors = [
    { name = "DataJoint", email = "info@datajoint.com" }
]
license = { file = "LICENSE" }
readme = "README.md"

[project.urls]
Homepage = "https://github.com/datajoint/element-miniscope"

[tool.setuptools.packages.find]
where = ["."]
include = ["element_miniscope*"]
exclude = ["contrib*", "docs*", "tests*", "notebooks*", "images*"]